kubeInventory/inventory_web_deplotment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-order-luris-api-final-deployment
  namespace: luris-final-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-order-luris-api-final
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: inventory-order-luris-api-final
    spec:
      containers:
      - name: inventory-order-luris-api-final
        image: luris26/inventory-management-api-final-luris26:${IMAGE_ID}
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: podsstorage
            mountPath: /app/images
      volumes:
        - name: podsstorage
          persistentVolumeClaim:
            claimName: inventory-order-luris-api-final-pvc

            ###
