kubeInventory/inventory_web_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-order-luris-api-ingress
  namespace: luris-final-project
spec:
  rules:
  - host: api.final-project-luris.duckdns.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: inventory-order-luris-api-final-service
            port:
              number: 8080
